<resources>
    <string name="app_name">Nice Device</string>
    <string name="fullproperties">Properties</string>
    <string name="logcat">Collect Logs</string>
    <string name="crearlog">Clear Logs</string>
    <string name="startlog">Start Logs</string>
    <string name="stoplog">Stop Logs</string>
    <string name="googleconfig">Google Config</string>
    <string name="remotemode">Remote Mode</string>


    <string name="title_activity_properties">properties</string>
    <string name="developmentswitch">Development Options</string>
    <string name="setdeviceowner1">"adb shell dpm set-device-owner com.studio.nicedevice/.DeviceAdminReceiver"</string>
    <string name="setdeviceowner2">Please Set Device Owner:</string>
    <string name="enabledevmode">Enable Development Mode:</string>
    <string name="enableadbmode">Enable ADB Mode:</string>
    <string name="enablestayawake">Enable stay awake:</string>
    <string name="enablewifi">Enable WIFI P&amp;D:</string>
    <string name="enabletime">Enable Time / Time zone:</string>
    <string name="enabledisplay">Enable Display Settings:</string>


</resources>
